# Normal-Vector-NDT

./: .clang-format  .gitignore  InitCov.sh  README.md  ReportCov.sh  format.sh  normal2d  out  run.sh  runl.sh
src/common/: CMakeLists.txt  package.xml
src/common/include/common/: angle_utils.h  common.h  common_utils.hpp  eigen_utils.h  eigen_utils.hpp  geometry_utils.h  geometry_utils.hpp  match_utils.hpp  other_utils.h  tqdm.h  visualization_utils.hpp
src/common/include/dbg/: dbg.h
src/common/include/tqdm/: tqdm.h
src/common/msg/: EgoPointClouds.msg  PointCloudSensor.msg
src/common/src/: dummy.cc  eigen_utils.cc  eigen_utils_test.cc  geometry_utils.cc  other_utils.cc  other_utils_test.cc
src/common/src/common/: utils.py
src/ego/: CMakeLists.txt  package.xml
src/ego/launch/: ego.launch
src/ego/src/: ego.cc
src/metric/: CMakeLists.txt  package.xml
src/metric/data/: estndt.txt  estsicp.txt  gt.txt
src/metric/include/metric/: metric.h
src/metric/src/: metric.cc  metric_test.cc
src/ndt/: CMakeLists.txt  NVNDT.ipynb  package.xml
src/ndt/data/: bunny1.pcd
src/ndt/include/ndt/: cell.h  cell2d.h  costs.h  matcher.h  matcher2d.h  nmap.h  nmap2d.h  opt.h  options.h  orj.h  timer.h  visuals.h
src/ndt/src/: cell.cc  cell2d.cc  cell_test.cc  matcher.cc  matcher2d.cc  matcher2d_test.cc  matcher_test.cc  nmap.cc  nmap2d.cc  nmap2d_test.cc  nmap_test.cc  opt.cc  orj.cc  timer.cc  timer_test.cc  visuals.cc
src/ndt_exec/: CMakeLists.txt  package.xml
src/ndt_exec/include/ndt_exec/: groundfit.h  wrapper.h
src/ndt_exec/scripts/: BoxPlot.ipynb  C1 and C2 Experiments.ipynb  Final - Bunny.ipynb  NDT Formulas.ipynb  NDT and SNDT.ipynb  Normal Distribution.ipynb  Parameters.ipynb  Product of Gaussian pdf.ipynb  SNDT Animation.ipynb  TimeBar.ipynb  distri.py  evalrate.py  heat.py  iterations.txt  iterations4.txt  pngui.py  test_diff.py
src/ndt_exec/src/: exp6-2.cc  exp6.cc  exp7-2.cc  exp7-3.cc  exp7.cc  exp8-1.cc  exp8-2.cc  exp8-3.cc  exp8-4.cc  exp8.cc  exp9.cc  expf-1.cc  expf-2.cc  expf-3.cc  expf-4-2.cc  expf-4.cc  expf-5.cc  expf-6-2.cc  expf-6.cc
src/nndt/: CMakeLists.txt  package.xml
src/nndt/data/: bunny2.pcd
src/nndt/include/nndt/: cell.h  cell2d.h  costs.h  matcher.h  nmap.h  opt.h  orj.h
src/nndt/src/: cell.cc  cell2d.cc  cell_test.cc  matcher.cc  matcher_test.cc  nmap.cc  nmap_test.cc  opt.cc  orj.cc  timer.cc  timer_test.cc
src/normal2d/: CMakeLists.txt  main.cpp  package.xml  sample2.pcd
src/normal2d/include/normal2d/: normal2d.h  pca2d.h
src/normal2d/src/: Normal2dEstimation.cpp  PCA2D.cpp  normal2d.cc  normal2dtest.cc  pca2d.cc
src/pcl_exec/: CMakeLists.txt  package.xml
src/pcl_exec/include/pcl_exec/: myd2dndt.h  myndt.h  myndt.hpp  myvoxels.h  myvoxels.hpp
src/pcl_exec/src/: exp6.cc  matcher_test.cc
src/pclmatch/: CMakeLists.txt  package.xml
src/pclmatch/include/normal2d/: Normal2dEstimation.hpp  PCA2D.hpp
src/pclmatch/include/pclmatch/: bc_function.txt  wrapper.hpp
src/pclmatch/src/: main.cc  pcl_version.cc  test0207.cc  test0209.cc  test0218.cc  test0426.cc  test_0dis.cc
src/polar_grid_plane/: CMakeLists.txt  README.md  package.xml  plane_csv_name.txt
src/polar_grid_plane/include/polar_grid_plane/: groundfit.h
src/polar_grid_plane/nodes/ground_filter/: groundplanfit.cpp
src/polar_grid_plane/src/: dummy.cc  groundfit.cc  groundfitnode.cc
src/rpg_te/: CMakeLists.txt  package.xml
src/rpg_te/scripts/: add_path.py  analyze_trajectories.py  analyze_trajectory_single.py
src/rpg_te/src/rpg_te/: plot_utils.py  trajectory.py
src/sndt/: CMakeLists.txt  package.xml
src/sndt/include/sndt/: cell_interface.h  conti_tool.hpp  cost_functors.h  cost_functors_arc.h  eigen_utils.h  helpers.h  lazy_grid_2d.hpp  map_interface.h  matcher.h  matcher_arc.h  matcher_pcl.h  ndt_cell.h  ndt_cell_2d.hpp  ndt_conversions.hpp  ndt_grid.h  ndt_map.h  ndt_map_2d.hpp  ndt_matcher.h  ndt_matcher_2d.hpp  ndt_visualizations.h  optimizer.h  outlier_reject.h  parameters.h  (+6 more)
src/sndt/launch/: ego.launch
src/sndt/msg/: EgoPointClouds.msg  NDTCellMsg.msg  NDTMapMsg.msg  PointCloudSensor.msg
src/sndt/scripts/: distri.py
src/sndt/src/: bagpair.cc  ceres_test.cc  dummy.cpp  eclipse_tangent.cc  ego.cc  gtpath.cc  main.cc  match_vis.cc  matcher.cc  matcher_arc.cc  matcher_pcl.cc  msgadap.cc  ndt_cell.cc  ndt_grid.cc  ndt_map.cc  ndt_matcher.cc  ndt_visualizations.cc  optimizer.cc  outlier_reject.cc  pairmatch.cc  pcl_version.cc  result_vis.cc  savepc.cc  sensor_model.cc  sndt_cell.cc  sndt_map.cc  test0128.cc  test0129.cc  test0426.cc  test0621.cc  test_0630.cc  test_0dis.cc  test_covmap.cc  used_time.cc  visuals.cc
src/sndt_exec/: CMakeLists.txt  package.xml
src/sndt_exec/scripts/: BoxPlot.ipynb  Converge.ipynb  Ellipse.ipynb  Final - Bunny.ipynb  Final - nuScenes.ipynb  Formula 3D.ipynb  Iterations.ipynb  NDT and SNDT.ipynb  Normal Distribution.ipynb  TimeBar.ipynb  Untitled.ipynb  ani.ipynb  animate.py  box.py  contour.ipynb  contourxt.ipynb  ellipse.ipynb  eval.py  evalcon.py  formula.ipynb  iterations2.txt  iterations3.txt  mvn.py  mvntest.py  optimize.ipynb  pngui.py  succesrate.ipynb
src/sndt_exec/src/: augmap.cc  celldistri.cc  contour.cc  contourxt.cc  evalcon.cc  evalfunctor.cc  evallall.cc  evalmatch.cc  evalrate.cc  evalsingle.cc  evalsndt.cc  evalsndt2.cc  evalsndtcvg.cc  evaltime.cc  evaltime2.cc  exp1-2.cc  exp1-3.cc  exp1.cc  exp2.cc  exp3-1.cc  exp3-2.cc  exp3-3.cc  exp3-4.cc  exp3-5.cc  exp4.cc  exp5.cc  exp6-2.cc  exp6.cc  exp7-2.cc  exp7-3.cc  exp7.cc  exp8-1.cc  exp8-2.cc  exp8-3.cc  exp8-4.cc  exp8.cc  exp9.cc  expf-1.cc  expf-3.cc  expf-4-2.cc  (+16 more)
src/sndt_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
src/sndt_rviz/src/: ndt_display.cpp  ndt_visual.cpp
src/tool/: CMakeLists.txt  package.xml
src/tool/launch/: image.launch
src/tool/src/: bagtoply.cc  getgtpath.cc  getimages.cc  getlidars.cc  gtdis.cc  gtpath.cc  mitstomit.cc  occtest.cc  pathtotext.cc  seelidar.cc  seetfs.cc  showpath.cc
src/trimesh2/: CMakeLists.txt  package.xml
src/trimesh2/include/: ICP.h
src/trimesh2/src/: ICP.cc
(+2332 files in other folders)
