<?xml version="1.0"?>
<package format="2">
  <name>normal2d</name>
  <version>0.0.0</version>
  <description>The normal2d package</description>
  <maintainer email="huatsai.eed07g@nctu.edu.tw">HuaTsai</maintainer>
  <license>BSD</license>
  <author>Gauthier-Clerc François</author>
  <url type="github">http://www.github.com/Enderdead/PCL-Normal-Estimation-2d</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
</package>
