<?xml version="1.0"?>
<package format="2">
  <name>normal2d</name>
  <version>0.0.0</version>
  <description>The normal2d package</description>
  <maintainer email="huatsai.eed07g@nctu.edu.tw">HuaTsai</maintainer>
  <license>MIT</license>
  <author email="huatsai.eed07g@nctu.edu.tw">HuaTsai</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
</package>
