<?xml version="1.0"?>
<package format="2">
  <name>pclmatch</name>
  <version>0.0.0</version>
  <description>The pclmatch package</description>
  <maintainer email="huatsai.eed07g@nctu.edu.tw">HuaTsai</maintainer>
  <license>BSD</license>
  <author email="huatsai.eed07g@nctu.edu.tw">HuaTsai</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>common</depend>
</package>
