<?xml version="1.0"?>
<package format="2">
  <name>polar_grid_plane</name>
  <version>1.0.0</version>
  <description>The polar_grid_plane package</description>
  <maintainer email="vincent.cheung.mcer@gmail.com">vincent</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>common</depend>
</package>
