<?xml version="1.0"?>
<package>
  <name>sndt_rviz</name>
  <version>0.0.0</version>
  <description>The sndt_rviz package</description>
  <maintainer email="huatsai.eed07g@nctu.edu.tw">HuaTsai</maintainer>
  <license>BSD</license>
  <author email="huatsai.eed07g@nctu.edu.tw">HuaTsai</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sndt</build_depend>
  <build_depend>message_generation</build_depend>  
  <run_depend>sndt</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rviz</run_depend>
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
